# k0r

./: .build.yml  Cargo.toml  README.md  insert-url.sh  k0r.db  test.db  test.urls
db/: insert-via-api.sh  random-path.lua  schema.sql  test_data.sql  wrk.results
src/: actix_ructe.rs  build.rs  db.rs  main.rs  response_types.rs  server.rs  short_code.rs  shortener.rs
src/static/: style.css
src/templates/: base.rs.html  index.rs.html  redirect.rs.html  social.rs.html
