[package]
name = "k0r-url-shortener"
version = "0.1.0"
authors = ["koehr <n@koehr.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"
radix_fmt = "1"
url = "2.2"
r2d2 = "0.8"
r2d2_sqlite = "0.17"
rusqlite = "0.24"
futures = "0.3.9"
failure = "0.1.8"
exitcode = "1.1.2"

[features]
debug-output = []
