[package]
name = "k0r"
version = "0.1.0"
authors = ["koehr <n@koehr.in>"]
edition = "2018"
license = "MIT"
description= "Very performant URL shortener service for individuals."
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["static", "website", "weblog", "blog", "markdown", "ssr", "web"]
repository = "https://git.sr.ht/~koehr/k0r"
homepage = "https://sr.ht/~koehr/k0r/"

build = "src/build.rs"

[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"
radix_fmt = "1"
mime = "0.3"
url = "2.2"
r2d2 = "0.8"
r2d2_sqlite = "0.17"
rusqlite = "0.24"
futures = "0.3"
failure = "0.1.8"
exitcode = "1.1.2"
human-panic = "1.0.3"

[features]
debug-output = []

[build-dependencies]
ructe = { version = "0.13", features = ["mime03"] }
