[package]
name = "k0r"
version = "0.1.0"
authors = ["koehr <n@koehr.in>"]
edition = "2018"
license = "MIT"
description= "Very performant URL shortener service for individuals."
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["web-service", "web-application", "url-shortener", "self-hosted"]
repository = "https://git.sr.ht/~koehr/k0r"
homepage = "https://sr.ht/~koehr/k0r/"

build = "src/build.rs"

[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"
radix_fmt = "1"
mime = "0.3"
url = "2.2"
r2d2 = "0.8"
r2d2_sqlite = "0.17"
rusqlite = { version = "0.24", features = ["bundled"] }
futures = "0.3"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
pretty_env_logger = "0.4"
uuid = { version = "0.8", features = ["v4"] }
failure = "0.1.8"
failure_derive = "0.1.1"
exitcode = "1.1.2"
human-panic = "1.0.3"
text_io = "0.1.8"

[build-dependencies]
ructe = { version = "0.13", features = ["mime03"] }
